[package]
name = "wopr-tag"
version = "0.1.0"
edition = "2018"
authors = ["Edmund Kump"]

[dependencies]
clap = "~2"
futures = "*"
log = "~0.4"
rand = "~0.8"
simple_logger = "~1.3"
tokio = { version = "1", features = ["full", "time"] }

[[bin]]
name = "wopr_tag"
path = "src/bin/cli/wopr_tag.rs"

[lib]
name = "wopr_tag"
path= "src/lib.rs"
